@@ -275,6 +275,8 @@
 					<option value="85" data-i18n="Rain">Rain</option>
 					<option value="86" data-i18n="Wind">Wind</option>
 					<option value="87" data-i18n="UV">UV</option>
+					<option value="113" data-i18n="Counter">Counter</option>
+					<option value="90" data-i18n="Electric (Instant+Counter)">Electric (Instant+Counter)</option>
 				</select>
 		</form>
 </div>
